--- a/index.html
+++ b/index.html
@@ -10,9 +10,7 @@
 <div id="body-div">
 
 <div id="calculator-div">
-
     <div id="display">0</div>
-
     <div id="calc-buttons">
     <button id="number-1" class="num-button">1</button>
     <button id="number-2" class="num-button">2</button>
@@ -31,24 +29,19 @@
     <button id="divider" class="operators">%</button>
     <button id="equals" class="operators">=</button>
     <button id="clear" class="operators">A/C</button>
-
     </div>  
-
 </div>
 
-<p>Current Bug: you figured out how to chain the operations 
-    so you are able to get correct answers.
-    HOWEVER... there is a NEW bug.
-    Whats happening,
-    is that when the "=" button is pressed
-    it messes up all the tallys and variables
-    so if you try to chain an operation on a display
-    number AFTER you already pressed that equals button,
-    it will just cause chaos the moment you press
-    the next operation button.
-    its a hidden bug it only shows if u try to keep doing math
-    after you pressed "=" once.
+<p>
+    Current bugs: <br> -equal button causes errors SOMETIMES <br> -can't do more than
+    two digits for SecondNum <br> -zero doesn't work if you want to use it on its own.
 </p>
+<p>DEBUG PROCESS:<br>
+    • chain equations without pressing "="
+    • chain equations and separate them by pressing "="
+    • can you subtract 100 all the way to zero using different numbers? 
+</p>
+
 
 
 
