--- a/index.html
+++ b/index.html
@@ -33,14 +33,10 @@
 </div>
 
 <p>
-    Current bugs: <br> -equal button causes errors SOMETIMES <br> -can't do more than
-    two digits for SecondNum <br> -zero doesn't work if you want to use it on its own.
+    Current bugs: <br>-it makes any decimal number 8 
+    decimal points ahead.<br> -zero doesn't work if you want to use it on its own.
 </p>
-<p>DEBUG PROCESS:<br>
-    • chain equations without pressing "="
-    • chain equations and separate them by pressing "="
-    • can you subtract 100 all the way to zero using different numbers? 
-</p>
+
 
 
 
