--- a/index.html
+++ b/index.html
@@ -33,8 +33,10 @@
 </div>
 
 <p>
-    Current bugs: <br>-it makes any decimal number 8 
-    decimal points ahead.<br> -zero doesn't work if you want to use it on its own.
+    Current bugs: <br>-you fixed the decimal bug but now 
+    when you take a decimal and add something to it it gets rid of decimal places
+    in front of it. you'll see. try 1.5 + 1 and see what happens.<br> -zero doesn't
+     work if you want to use it on its own.
 </p>
 
 
