--- a/index.html
+++ b/index.html
@@ -22,6 +22,8 @@
     <button id="number-8" class="num-button">8</button>
     <button id="number-9" class="num-button">9</button>
     <button id="number-0" class="num-button">0</button>
+    <button id="decimal">.</button>
+    <button id="backspace">🔙</button>
 
     <button id="adder" class="operators">+</button>
     <button id="subtracter" class="operators">-</button>
@@ -33,11 +35,12 @@
 </div>
 
 <p>
-    Current bugs: <br>-you fixed the decimal bug but now 
-    when you take a decimal and add something to it it gets rid of decimal places
-    in front of it. you'll see. try 1.5 + 1 and see what happens.<br> -zero doesn't
-     work if you want to use it on its own.
+    Current bugs: <br>-If you do 10.55 minus 10, look what happens.
+    (only occurs if decimal place is more than 1)
+    <br>if you backspace on a solution number, it still stores solution number
+    not whatever the new number is after backspacing. if you a/c this bug isn't noticeable.
 </p>
+
 
 
 
