--- a/index.html
+++ b/index.html
@@ -35,8 +35,7 @@
 </div>
 
 <p>
-    Current bugs: <br>-If you do 10.55 minus 10, look what happens.
-    (only occurs if decimal place is more than 1)
+    Current bugs: 
     <br>if you backspace on a solution number, it still stores solution number
     not whatever the new number is after backspacing. if you a/c this bug isn't noticeable.
 </p>
