--- a/index.html
+++ b/index.html
@@ -9,9 +9,17 @@
 <body>
 <div id="body-div">
 
+
+<h1>Josue's Javascript Calculator</h1>
+<h3>the Odin Project 2024</h3>
+
 <div id="calculator-div">
     <div id="display">0</div>
     <div id="calc-buttons">
+        <button id="adder" class="operators"><strong>+</strong></button>
+        <button id="subtracter" class="operators"><strong>-</strong></button>
+        <button id="multiplier" class="operators"><strong>X</strong></button>
+        <button id="divider" class="operators"><strong>%</strong></button>
     <button id="number-1" class="num-button">1</button>
     <button id="number-2" class="num-button">2</button>
     <button id="number-3" class="num-button">3</button>
@@ -22,13 +30,10 @@
     <button id="number-8" class="num-button">8</button>
     <button id="number-9" class="num-button">9</button>
     <button id="number-0" class="num-button">0</button>
-    <button id="decimal">.</button>
+    <button id="decimal"><strong>.</strong></button>
 
-    <button id="adder" class="operators">+</button>
-    <button id="subtracter" class="operators">-</button>
-    <button id="multiplier" class="operators">X</button>
-    <button id="divider" class="operators">%</button>
-    <button id="equals" class="operators">=</button>
+  
+    <button id="equals" class="operators"><strong>=</strong></button>
     <button id="clear" class="operators">A/C</button>
     </div>  
 </div>
